# annasul

./: README.md
cargo/: Cargo.toml  rust-toolchain.toml  rustfmt.toml  test.aau
cargo/abuild/: Cargo.toml  README.md
cargo/abuild/src/: command.rs  lang.rs  lib.rs  profile.rs  project.rs  utils.rs
cargo/abuild/src/lang/: c.rs  cpp.rs  csharp.rs  rust.rs
cargo/abuild/src/project/: commands.rs  sources.rs
cargo/annasul/: Cargo.toml  README.md
cargo/annasul/src/: app.rs  lib.rs  marco.rs  os_impl.rs
cargo/annasul/src/app/: apps.rs
cargo/annasul/src/os_impl/: ios.rs
cargo/annasul/src/os_impl/desktop/app/apps/: rust.rs
cargo/annasul/src/os_impl/macos/: app.rs
cargo/annasul_lang/src/: lib.md  lib.rs  utils.rs
cargo/annasul_lang/src/lexer/: scanner.rs  token.rs
cargo/annasul_lang/src/utils/: error.rs
cmake/: CMakeLists.txt  main.cpp  test_print.cpp
docs/: docs.md  index.html
docs/abuild/: index.md
rust/: Cargo.toml
rust/abuild/: README.md
rust/abuild/src/: command.rs  lib.rs
rust/annasul/: Cargo.toml
rust/annasul/src/: app.rs  lib.rs
rust/annasul/src/os_impl/: mobile.rs
rust/annasul/src/os_impl/desktop/app/apps/: rust.rs
rust/annasul/src/os_impl/mobile/: app.rs
rust/annasul/src/os_impl/windows/: app.rs
rust/annasul_lang/: Cargo.toml
rust/annasul_lang/src/: lexer.rs  lib.md  lib.rs
rust/annasul_lang/src/lexer/: scanner.rs  token.rs
