[workspace]
members = ["annasul", "abuild", "annasul_lang"]
resolver = "3"
exclude = []

[workspace.package]
version = "0.0.1"
authors = ["algosul@github.com"]
homepage = "https://github.com/algosul/annasul"
repository = "https://github.com/algosul/annasul"
keywords = ["annasul", "build"]
license = "AGPL-3.0-only"
edition = "2024"
description = "Some user-friendly yet personalized tools"
documentation = "https://docs.rs/annasul"

[workspace.dependencies]
clap = "4.*"
clap_complete = "4.*"
colored = "3.*"
tokio = "1.*"
serde = "1.*"
log = "*"
reqwest = "*"
env_logger = "*"
gtk4 = "*"
glib = "*"
