[package]
name = "annasul"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
readme = "README.md"

[lib]
name = "annasul"
crate-type = ["rlib"]

[[bin]]
name = "annasul"
path = "src/bin/main.rs"
required-features = ["app-apps", "gtk4", "glib"]

[features]
app = []
app-apps = ["app"]
gtk4 = ["dep:gtk4"]
glib = ["dep:glib"]

[dependencies]
tokio = { version = "1.*", features = [
    "process",
    "io-util",
    "rt",
    "macros",
    "rt-multi-thread",
] }
serde = { version = "1.*", features = ["derive"] }
log = { version = "0.4", features = ["serde", "kv_serde"] }
reqwest = { version = "0.11", features = ["blocking"] }
env_logger = { version = "0.11" }
gtk4 = { version = "0.9", features = ["v4_10"], optional = true }
glib = { version = "0.20", features = [], optional = true }